# revenant

./: Cargo.toml
examples/: geofence_drone.rs
src/: cloudevents.rs  core.rs  error.rs  lib.rs  net.rs  network.rs  ports.rs
src/adapters/: mod.rs  noop_repo.rs  p2p_syncer.rs  redis_syncer.rs  sqlite_repo.rs
